fix: :wrench: Corrige histórico de pontos eletrônico